# serializer version: 1
# name: test_setup[AVR20][remote.arcam_fmj_127_0_0_1_remote-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'remote',
    'entity_category': None,
    'entity_id': 'remote.arcam_fmj_127_0_0_1_remote',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Remote',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Remote',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'remote',
    'unique_id': '456789abcdef-1-remote',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR20][remote.arcam_fmj_127_0_0_1_remote-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Remote',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <RemoteEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'remote.arcam_fmj_127_0_0_1_remote',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_setup[AVR20][remote.arcam_fmj_127_0_0_1_zone_2_remote-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'remote',
    'entity_category': None,
    'entity_id': 'remote.arcam_fmj_127_0_0_1_zone_2_remote',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Remote',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Remote',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'remote',
    'unique_id': '456789abcdef-2-remote',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR20][remote.arcam_fmj_127_0_0_1_zone_2_remote-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) Zone 2 Remote',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <RemoteEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'remote.arcam_fmj_127_0_0_1_zone_2_remote',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
